Practice02/src/log/build_2024-10-19_11-35-07/task03/stderr.log
  File "/ros2SonyaBurg/Practice02/src/install/task03/lib/python3.10/site-packages/task03/service.py", line 35
    if __name__ = "__main__":
       ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

